# browser-research-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: CLOUD_RUN_CD.md
.github/workflows/: deploy-cloud-run.yml  deploy-gke.yml
.kryptos-local/kryptos-pib-gov-in-20260617-052712/20260617T052856Z/: pib_pmo_20250501.json
k8s/: README.md  deployment.yaml  service.yaml
scripts/: test_agent_sonnet.py  test_build_job_tree.py
src/browser_research/: __init__.py  __main__.py  extraction.py  playbooks.py  server.py  strategy.py  tools.py
tests/: test_filegrep.py  test_helpers.py  test_proxy_sitemap.py  test_strategy.py
