[project]
name = "browser-research-mcp"
version = "0.1.0"
description = "Browser-based research MCP — drives a real Chromium via patched Playwright + Sonnet vision to read JS-rendered pages, login-walled dashboards, and dynamic dropdowns that pdf_fetch / http_post_form can't reach."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "DeepInsights" }]
license = { text = "Apache-2.0" }
keywords = ["mcp", "modelcontextprotocol", "playwright", "browser", "patchright"]

dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.9",
    # patchright is a drop-in patched Playwright that disables the
    # AutomationControlled flag, removes Runtime.enable leaks, and several
    # other detection vectors. Use the async_api exactly like upstream.
    # If patchright ever stops being maintained we can swap back to plain
    # `playwright` by changing one import line.
    "patchright>=1.40",
    # In-process TTL caches — mirror the authority-web-search pattern.
    "cachetools>=5.3",
    # google-cloud-storage for session storage_state persistence. Optional;
    # tools degrade gracefully to local /tmp when not configured.
    "google-cloud-storage>=2.10",
    # Spreadsheet + PDF parsing for download_file(). Mirrors the toolchain
    # in authority-web-search so a URL pointing at a .xlsx, .xls, .csv or
    # .pdf can be downloaded and read end-to-end inside browser-research,
    # without bouncing the caller to another MCP.
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pypdf>=4.0",
    # Hybrid auth middleware deps. google-auth pulls in google.oauth2 for
    # id-token verification; starlette is required directly so our
    # BaseHTTPMiddleware import survives mcp's stack changes.
    "uvicorn>=0.30",
    "starlette>=0.40",
    "google-auth>=2.30",
    "requests>=2.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.7"]
# Optional alternate browser engine (BROWSER_ENGINE=camoufox). Not installed by
# default, to keep the image lean. Also needs `python -m camoufox fetch` and
# Firefox's system libs in the image. See README -> Browser engines.
camoufox = ["camoufox[geoip]>=0.4"]

[project.scripts]
browser-research = "browser_research.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_research"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
# auto so future browser-driving tests can be plain `async def` without a marker
asyncio_mode = "auto"
